src/test/deca/codegen/valid/created/objet/field_recur.deca
class A {
    int x = 1;
}

class B extends A {

}

class C extends B {

}

class D extends C {

}

{
    D d = new D();
    if(d.x == 1) {
        println("passed");
    } else {
        println("error");
    }
}