src/test/deca/codegen/invalid/created/objet/invalidIdent.deca
//error :  variable name can not be type name "int"
class A {
    int A  = 15;
}

{
    A int   = new A();
}